# desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  i18n.ts  index.css  providersModelsCache.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create-icon.cjs  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/steps/: StepConfigure.tsx  StepDone.tsx  StepDownload.tsx  StepGateway.tsx  StepInstall.tsx  StepModels.tsx  StepSkills.tsx  StepWelcome.tsx
